# liubai-reflection

./: .gitignore  README.md  docker-compose.yml  package.json
docs/: ai-module-governance.md  developer-guide.md
server/: .env.example  pyproject.toml
server/app/: db.py  deps.py  main.py  models.py  schemas.py  security.py
server/app/core/: config.py
server/app/routers/: auth.py  entries.py
server/app/services/: dashboard_builder.py  entry_presenter.py  insight_extractor.py  llm_client.py  table_ai.py  table_templates.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/auth/: page.tsx
web/app/days/[date]/: page.tsx
web/app/insights/: page.tsx
web/app/journal/[id]/: page.tsx
web/app/table/: page.tsx
web/app/table/[id]/: page.tsx
web/components/: auth-page-client.tsx  bookmark-nav.tsx  day-detail-page.tsx  emotion-icon.tsx  entry-detail-page.tsx  home-page-client.tsx  insights-page-client.tsx  seeing-record-detail-client.tsx  table-page-client.tsx  weather-icon.tsx
web/lib/: api-endpoints.ts  api.ts  mock.ts  types.ts
